# Amatsumara-Framework

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
amatsumara-api/: Cargo.toml
amatsumara-api/src/: lib.rs  session_api.rs  session_channel.rs
amatsumara-console/: Cargo.toml
amatsumara-console/src/: banner.rs  commands.rs  completer.rs  context.rs  main.rs
amatsumara-core/: Cargo.toml
amatsumara-core/src/: lib.rs  loader.rs  session.rs
amatsumara-core/src/module/: check.rs  metadata.rs  mod.rs  options.rs
amatsumara-core/src/registry/: mod.rs
docs/: MODULES.md
kanayago/: Cargo.toml
kanayago/src/: lib.rs
kanayago/src/proto/: mod.rs
kanayago/src/proto/http/: client.rs  mod.rs
kanayago/src/text/: mod.rs  pattern.rs
modules/auxiliary/nextjs_auth_bypass/: Cargo.toml
modules/auxiliary/nextjs_auth_bypass/src/: lib.rs
modules/auxiliary/simplehelp_file_read/: Cargo.toml
modules/auxiliary/ssh_login/: Cargo.toml
modules/exploits/apache_continuum_cmd_exec/: Cargo.toml
modules/exploits/apache_log4j_rce/: Cargo.toml
modules/exploits/apache_mod_cgi_bash_env/: Cargo.toml
modules/exploits/apache_struts2_rest_xstream/: Cargo.toml
modules/exploits/apache_struts_rce/: Cargo.toml
modules/exploits/apache_tomcat_manager_upload/: Cargo.toml
modules/exploits/atlassian_confluence_ognl_injection/: Cargo.toml
modules/exploits/cacti_rce/: Cargo.toml
modules/exploits/cisco_asa_rce/: Cargo.toml
modules/exploits/citrix_sharefile_rce/: Cargo.toml
modules/exploits/confluence_rce/: Cargo.toml
modules/exploits/cve_2020_0796/: Cargo.toml
modules/exploits/distcc_exec/: Cargo.toml
modules/exploits/docker_api_rce/: Cargo.toml
modules/exploits/docker_registry/: Cargo.toml
modules/exploits/drupal_drupalgeddon/: Cargo.toml
modules/exploits/drupal_drupalgeddon2/: Cargo.toml
modules/exploits/drupal_drupalgeddon3/: Cargo.toml
modules/exploits/drupal_rest_rce/: Cargo.toml
modules/exploits/exchange_rce/: Cargo.toml
pattern-create/: Cargo.toml
pattern-create/src/: main.rs
pattern-offset/: Cargo.toml
pattern-offset/src/: main.rs
(+207 files in other folders)
