[workspace]
members = ["kanayago", "amatsumara-core", "amatsumara-console", "pattern-create", "pattern-offset", "amatsumara-api"]
exclude = ["modules"]
resolver = "2"

[workspace.package]
version = "2.4.0"
edition = "2021"
authors = ["Amatsumara Project"]
license = "BSD-3-Clause"

[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Logging
log = "0.4"
env_logger = "0.11"

# Networking
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls = "0.23"

# CLI
clap = { version = "4", features = ["derive"] }

# Dynamic loading
libloading = "0.8"
