[package]
name = "kanayago"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
