[package]
name = "nextjs_auth_bypass"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
amatsumara-api = { path = "../../../amatsumara-api" }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"], default-features = false }

[features]
default = ["reqwest/native-tls"]
